# automated-workstation

./: .env  .gitignore  Dockerfile  LICENSE  Makefile  README.Docker.md  README.md  compose.yaml  docker-compose.yml  go.mod  go.sum  h2uml_drawio.py  main.go  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
backend/: Dockerfile  go.mod  go.sum  main.go
deploy/: README.Docker.md  compose.yaml  memory_leaks
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  tsconfig.tsbuildinfo  vite.config.ts
latex/: 00-title.tex  12-intro.tex  rpz.bib  (+7 more)
qt-client/: CMakeLists.txt  CustomButton.cpp  CustomButton.h  ErrorWidget.cpp  ErrorWidget.h  LoginWidget.cpp  LoginWidget.h  MainWindow.cpp  MainWindow.h  PaginationWidget.cpp  PaginationWidget.h  TimetablePainter.cpp  TimetablePainter.h  TimetableRenderer.cpp  TimetableRenderer.h  UiLesson.cpp  UiLesson.h  main.cpp  resources.qrc
qt-client/EditorWidgets/: LessonEditorWidget.cpp  LessonEditorWidget.h  LocationsEditorWidget.cpp  LocationsEditorWidget.h  SearchComboWidget.cpp  SearchComboWidget.h  SubgroupEditorWidget.cpp  SubgroupEditorWidget.h  SubjectsEditorWidget.cpp  TeachersEditorWidget.cpp  TeachersEditorWidget.h  TimetablesEditorWidget.cpp  TimetablesEditorWidget.h
qt-client/TimetableViewer/: TimetablePainter.cpp  TimetablePainter.h  TimetableRenderer.cpp  TimetableRenderer.h
qt-client/api/: .openapi-generator-ignore  BasePath.h  api-consts.h  api-consts.h.in
qt-client/api/.openapi-generator/: FILES
qt-client/api/client/: CMakeLists.txt  OAIDefaultApi.cpp  OAIDefaultApi.h  OAIError.h  OAIHelpers.cpp  OAIHelpers.h  OAIHttpFileElement.cpp  OAIHttpRequest.cpp  OAIHttpRequest.h  OAILesson.h  OAIListErrors.cpp  OAIListLocations.cpp  OAIListLocations.h  OAIListSubgroups.h  OAIListSubjects.cpp  OAIListTeachers.cpp  OAIListTimetables.cpp  OAIOauth.h  OAISubject.cpp  OAISubject.h  OAITeacher.h  OAITeacherLocationAssignment.cpp  OAITimetable.cpp  OAITimetable.h  OAIUser.cpp  client.pri
qt-client/styles/: app.qss  ui_lesson.qss
(+95 files in other folders)
